# cli-py

./: .gitignore  README.md  RELEASE_NOTES_v1.0.0.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: cli-contract.md  index.md
imrabo/adapters/: storage_fs.py
imrabo/adapters/http/: fastapi_server.py
imrabo/adapters/llama_cpp/: process.py
imrabo/adapters/storage_fs/: __init__.py  resolver.py
imrabo/cli/: client.py  core.py  main.py
imrabo/cli/commands/: doctor.py  install.py  restart.py  run.py  start.py  status.py  stop.py  version.py
imrabo/engine/: base.py  factory.py  llama_binary.py  llama_cpp.py
imrabo/internal/: constants.py  logging.py  paths.py  security.py
imrabo/kernel/: artifacts.py  execution.py
imrabo/kernel/contracts/: __init__.py  contracts.py
imrabo/registry/: models.json
imrabo/runtime/: engine.py  model_manager.py  security.py  server.py  system.py
registry/: models.json
site/: 404.html  index.html  sitemap.xml
site/adapters/fastapi-adapter/: index.html
site/adapters/future-adapters/: index.html
site/adapters/http-adapter/: index.html
site/adapters/llama-cpp-adapter/: index.html
site/architecture/cli/: index.html
site/cli-contract/: index.html
site/roadmap/: index.html
site/search/: search_index.json
tests/: conftest.py
tests/backward-compatibility/: test_kernel_data_compatibility.py
tests/kernel/: mocks.py
tests/performance/: test_basic_performance.py
tests/registry/: test_file_system_artifact_resolver.py
tests/security/: test_authentication.py
(+59 files in other folders)
